// Generated by j5build v0.0.0-20250403212908-de7c3c2e6cce. DO NOT EDIT

syntax = "proto3";

package test.v1.service;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "j5/ext/v1/annotations.proto";
import "test/v1/event_log.j5s.proto";

service EventLogService {
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse) {
    option (google.api.http) = {get: "/test/v1/eventlog/messages"};
  }
}

message GetMessagesRequest {
  option (j5.ext.v1.message).object = {};

  optional string greeting_id = 1 [
    (buf.validate.field).string.uuid = true,
    (j5.ext.v1.field).key = {}
  ];

  optional string event_id = 2 [
    (buf.validate.field).string.uuid = true,
    (j5.ext.v1.field).key = {}
  ];
}

message GetMessagesResponse {
  option (j5.ext.v1.message).object = {};

  repeated test.v1.Message messages = 1 [(j5.ext.v1.field).array = {}];
}
